# crypto_expand

./: pyproject.toml
crypto_proj_v2_1/crypto_proj/: db.sqlite3
crypto_proj_v2_1/crypto_proj/crypto_backend/: apps.py  models.py  serializers.py  urls.py  views.py
crypto_proj_v2_1/crypto_proj/crypto_backend/migrations/: 0001_initial.py  0002_alter_userlogin_email_alter_userlogin_username.py
crypto_proj_v2_1/crypto_proj/crypto_frontend/: package-lock.json  package.json
crypto_proj_v2_1/crypto_proj/crypto_frontend/src/: App.js  index.css
crypto_proj_v2_1/crypto_proj/crypto_frontend/src/components/: Info_Page.js  InformationPage.js  Login.js
crypto_proj_v2_1/crypto_proj/crypto_frontend/src/static/css/: InformationPage.css
crypto_proj_v2_1/crypto_proj/crypto_proj/: settings.py  urls.py
tests/: test_crypto_proj_v2_1.py
